avformat: add JT/T 1078 demuxer

--- a/doc/general_contents.texi
+++ b/doc/general_contents.texi
@@ -496,6 +496,7 @@ library:
     @tab A format used by libvpx
 @item Internet Video Recording  @tab   @tab X
 @item IRCAM                     @tab X @tab X
+@item JT/T 1078                 @tab   @tab X
 @item LATM                      @tab X @tab X
 @item LMLM4                     @tab   @tab X
     @tab Used by Linux Media Labs MPEG-4 PCI boards
